@@ -125,6 +125,13 @@ operation may fail when using such an incompatible client.
      included in the report.</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">remote</td>
+    <td valign="top">If set to true, works against the repository
+      (using rlog) without a working copy.  Default is
+      false.  <em>Since Ant 1.8.0</em></td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <h3>Parameters specified as nested elements</h3>
