@@ -469,6 +469,10 @@ Other changes:
    behavior of Ant 1.7.0.
    Bugzilla Report 46010.
 
+ * If the new remote attribute is set to true, <cvschangelog> can now
+   work against a remote repository without any working copy.
+   Bugzilla Report 27419.
+
 Changes from Ant 1.7.0 TO Ant 1.7.1
 =============================================
 
